--- a/style.css
+++ b/style.css
@@ -19,4 +19,22 @@ footer p {
 }
 .cartao{
     margin: 1rem 1rem;
+    background-color: gold;
+    height: 20rem;
+    flex-grow: 1;
+    flex-basis: calc(33%-6rem);
+}
+.cartao_conteudo{
+    text-align: center;
+    background-color: rgba(0, 174, 255, 0.87);
+    height: 100%;
+}
+.cartao_conteudo h3{
+    background-color: bisque;
+    text-align: left;
+    padding: 0.5rem;
+    position: absolute;
+    margin: 0.6rem;
+    border-radius: 0.6rem;
+    font-size: 1vw;
 }
