--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body{
-background-color:rgba(58, 238, 58, 0.411);
+background-color:url(img/bg-desktop.jpg);
 font-family: Georgia, 'Times New Roman', Times, serif;
 }
 footer{
