--- a/style.css
+++ b/style.css
@@ -1,9 +1,14 @@
 body{
-background-color:url(img/bg-desktop.jpg);
+background:url(img/bg-desktop.jpg);
 font-family: Georgia, 'Times New Roman', Times, serif;
 }
+:root{
+    --text-color:#DBE4EF;
+    --card-front-color:#144480;
+    --card-back-color:#00F4BF;
+}
 footer{
-    background-color:rgba(255, 217, 0, 0.548);
+    background-color:gold;
     color:black;
     position: fixed;
     bottom: 0;
@@ -19,22 +24,30 @@ footer p {
 }
 .cartao{
     margin: 1rem 1rem;
-    background-color: gold;
     height: 20rem;
     flex-grow: 1;
     flex-basis: calc(33%-6rem);
 }
 .cartao_conteudo{
     text-align: center;
-    background-color: rgba(0, 174, 255, 0.87);
+    background-color: var(--card-front-color);
     height: 100%;
 }
 .cartao_conteudo h3{
-    background-color: bisque;
+    color:var(--text-color);
+    border: 1px solid var(--text-color);
     text-align: left;
     padding: 0.5rem;
     position: absolute;
     margin: 0.6rem;
     border-radius: 0.6rem;
     font-size: 1vw;
+}
+.cartao_conteudo_pergunta p{
+    color: var(--text-color);
+    font-weight: 500;
+}
+.cartao_conteudo_resposta p{
+    color: var(--card-back-color);
+    font-weight: 700;
 }
